added projects 2 and 3

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 
 <body>
 
-<h1>Hello World</h1>
+<h1>Code Projects</h1>
 
-<p>I'm hosted with GitHub Pages.</p>
+<ul>
+
+	<li><a href="project2/index.html">25 Variations</a></li>
+	<li><a href="project3/index.html">CSS Typeface</a></li>
+
+</ul>
 
 </body>
 
