updated project files for portfolio

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <ul>
 
-	<li><a href="project2/index.html">25 Variations</a></li>
-	<li><a href="project3/index.html">CSS Typeface</a></li>
+	<li><a href="25_variations/index.html">25 Variations</a></li>
+	<li><a href="css_typeface/website_final_page1.html">CSS Typeface</a></li>
 
 </ul>
 
