--- a/25_variations/index.html
+++ b/25_variations/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link type="text/css" rel="stylesheet" href="style.css"/>
-	<title>Project 2 - 25 Variations</title>
+	<title>25 Variations</title>
 </head>
 <body>
 		
