--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<li><a href="25_variations/index.html">25 Variations</a></li>
 	<li><a href="css_typeface/website_final_page1.html">CSS Typeface</a></li>
+	<li><a href="project_darkh/page1.html">Project Darkh</a></li>
 
 </ul>
 
