--- a/project_darkh/page1.html
+++ b/project_darkh/page1.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Project 4</title>
+	<title>Project Darhk</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 	<link type="text/css" rel="stylesheet" href="assets/css/page1.css"/>
